--- a/package.json
+++ b/package.json
@@ -7,29 +7,33 @@
 		"clean:dist": "npx rimraf dist",
 		"dev": "vite --host",
 		"fix": "npm run fix:eslint && npm run fix:prettier",
-		"fix:eslint": "eslint --fix --ignore-path .gitignore .",
+		"fix:eslint": "eslint --fix .",
 		"fix:prettier": "prettier --write --cache --cache-location=.prettiercache --list-different --ignore-unknown . ",
 		"lint": "npm run lint:eslint && npm run lint:prettier",
-		"lint:eslint": "eslint --ignore-path .gitignore .",
+		"lint:eslint": "eslint .",
 		"lint:prettier": "prettier --check --cache --cache-location=.prettiercache --ignore-unknown . ",
 		"preview": "vite preview"
 	},
-	"dependencies": {},
 	"devDependencies": {
+		"@eslint/eslintrc": "3.1.0",
+		"@eslint/js": "9.4.0",
 		"@ianvs/prettier-plugin-sort-imports": "4.2.1",
-		"@vitejs/plugin-legacy": "5.3.2",
+		"@vitejs/plugin-legacy": "5.4.1",
 		"autoprefixer": "10.4.19",
-		"cssnano": "6.1.2",
-		"eslint": "8.57.0",
+		"cssnano": "7.0.2",
+		"eslint": "9.4.0",
+		"eslint-config-flat-gitignore": "0.1.5",
 		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-promise": "6.1.1",
-		"eslint-plugin-sonarjs": "0.24.0",
-		"eslint-plugin-unicorn": "51.0.1",
+		"eslint-plugin-promise": "6.2.0",
+		"eslint-plugin-sonarjs": "1.0.3",
+		"eslint-plugin-unicorn": "53.0.0",
+		"globals": "15.3.0",
 		"postcss": "8.4.38",
-		"prettier": "3.2.5",
-		"prettier-plugin-packagejson": "2.4.12",
-		"prettier-plugin-tailwindcss": "0.5.12",
-		"tailwindcss": "3.4.1",
-		"vite": "5.2.6"
+		"prettier": "3.3.1",
+		"prettier-plugin-packagejson": "2.5.0",
+		"prettier-plugin-tailwindcss": "0.6.1",
+		"tailwindcss": "3.4.4",
+		"terser": "5.31.0",
+		"vite": "5.2.12"
 	}
 }
