--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@angular-eslint/template-parser": "^18.0.1",
 		"@eslint/eslintrc": "3.1.0",
 		"@eslint/js": "9.4.0",
+		"@html-eslint/eslint-plugin": "^0.24.1",
+		"@html-eslint/parser": "^0.24.1",
 		"@ianvs/prettier-plugin-sort-imports": "4.2.1",
 		"@vitejs/plugin-legacy": "5.4.1",
 		"autoprefixer": "10.4.19",
@@ -25,7 +28,7 @@
 		"eslint-config-flat-gitignore": "0.1.5",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-promise": "6.2.0",
-		"eslint-plugin-sonarjs": "1.0.3",
+		"eslint-plugin-tailwindcss": "^3.17.3",
 		"eslint-plugin-unicorn": "53.0.0",
 		"globals": "15.3.0",
 		"postcss": "8.4.38",
