--- a/package.json
+++ b/package.json
@@ -12,29 +12,37 @@
 		"lint": "npm run lint:eslint && npm run lint:prettier",
 		"lint:eslint": "eslint .",
 		"lint:prettier": "prettier --check --cache --cache-location=.prettiercache --ignore-unknown . ",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"update:node-version-support": "npx installed-check --fix",
+		"updateDeps": "npx taze -I major",
+		"updateDeps:check": "npx taze -r major"
 	},
 	"devDependencies": {
-		"@angular-eslint/template-parser": "18.0.1",
-		"@eslint/eslintrc": "3.1.0",
-		"@eslint/js": "9.4.0",
-		"@ianvs/prettier-plugin-sort-imports": "4.2.1",
-		"@vitejs/plugin-legacy": "5.4.1",
-		"autoprefixer": "10.4.19",
-		"cssnano": "7.0.2",
-		"eslint": "9.4.0",
-		"eslint-config-flat-gitignore": "0.1.5",
-		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-promise": "6.2.0",
-		"eslint-plugin-tailwindcss": "3.17.3",
-		"eslint-plugin-unicorn": "53.0.0",
-		"globals": "15.3.0",
-		"postcss": "8.4.38",
-		"prettier": "3.3.1",
-		"prettier-plugin-packagejson": "2.5.0",
-		"prettier-plugin-tailwindcss": "0.6.1",
-		"tailwindcss": "3.4.4",
-		"terser": "5.31.0",
-		"vite": "5.2.12"
+		"@angular-eslint/template-parser": "19.0.2",
+		"@eslint/eslintrc": "3.2.0",
+		"@eslint/js": "9.18.0",
+		"@ianvs/prettier-plugin-sort-imports": "4.4.1",
+		"@vitejs/plugin-legacy": "6.0.0",
+		"autoprefixer": "10.4.20",
+		"cssnano": "7.0.6",
+		"eslint": "9.18.0",
+		"eslint-config-flat-gitignore": "1.0.0",
+		"eslint-config-prettier": "10.0.1",
+		"eslint-plugin-promise": "7.2.1",
+		"eslint-plugin-tailwindcss": "3.18.0",
+		"eslint-plugin-unicorn": "56.0.1",
+		"globals": "15.14.0",
+		"postcss": "8.5.1",
+		"prettier": "3.4.2",
+		"prettier-plugin-packagejson": "2.5.8",
+		"prettier-plugin-tailwindcss": "0.6.10",
+		"tailwindcss": "3.4.17",
+		"terser": "5.37.0",
+		"vite": "6.0.10",
+		"vite-plugin-minify": "^2.1.0"
+	},
+	"packageManager": "pnpm@9.15.4",
+	"engines": {
+		"node": "^18.18.0 || ^20.9.0 || >=22.0.0"
 	}
 }
