chore(vscode): 🧹 update VS Code settings and extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,18 +1,16 @@
 {
 	"recommendations": [
-		// ESLint, Find and fix problems in your JavaScript code
-		"dbaeumer.vscode-eslint",
-		// Prettier is an opinionated code formatter.
+		// General extensions
 		"esbenp.prettier-vscode",
-		// Frontend
+		"dbaeumer.vscode-eslint",
+		"stylelint.vscode-stylelint",
 		"bradlc.vscode-tailwindcss",
 
-		// Optional supporting extensions
-		"vivaxy.vscode-conventional-commits",
-		"aaron-bond.better-comments",
+		// Quality of life extensions
 		"formulahendry.auto-close-tag",
 		"formulahendry.auto-rename-tag",
 		"christian-kohler.npm-intellisense",
-		"christian-kohler.path-intellisense"
+		"christian-kohler.path-intellisense",
+		"aaron-bond.better-comments"
 	]
 }
