--- a/package.json
+++ b/package.json
@@ -1,47 +1,82 @@
 {
-	"private": true,
-	"license": "MIT",
+	"name": "vite-vanilla-js",
 	"type": "module",
-	"scripts": {
-		"build": "vite build",
-		"clean:dist": "npx rimraf dist",
-		"dev": "vite --host",
-		"fix": "npm run fix:eslint && npm run fix:prettier",
-		"fix:eslint": "eslint --fix .",
-		"fix:prettier": "prettier --write --cache --cache-location=.prettiercache --list-different --ignore-unknown . ",
-		"lint": "npm run lint:eslint && npm run lint:prettier",
-		"lint:eslint": "eslint .",
-		"lint:prettier": "prettier --check --cache --cache-location=.prettiercache --ignore-unknown . ",
-		"preview": "vite preview",
-		"update:node-version-support": "npx installed-check --fix",
-		"updateDeps": "npx npm-check-updates -u --target patch",
-		"updateDeps:check": "npx npm-check-updates --interactive --format group --target patch"
-	},
-	"devDependencies": {
-		"@angular-eslint/template-parser": "19.0.2",
-		"@eslint/js": "9.18.0",
-		"@ianvs/prettier-plugin-sort-imports": "4.4.1",
-		"@vitejs/plugin-legacy": "6.0.0",
-		"autoprefixer": "10.4.20",
-		"cssnano": "7.0.6",
-		"eslint": "9.18.0",
-		"eslint-config-flat-gitignore": "1.0.0",
-		"eslint-config-prettier": "10.0.1",
-		"eslint-plugin-promise": "7.2.1",
-		"eslint-plugin-tailwindcss": "3.18.0",
-		"eslint-plugin-unicorn": "56.0.1",
-		"globals": "15.14.0",
-		"postcss": "8.5.1",
-		"prettier": "3.4.2",
-		"prettier-plugin-packagejson": "2.5.8",
-		"prettier-plugin-tailwindcss": "0.6.10",
-		"tailwindcss": "3.4.17",
-		"terser": "5.37.0",
-		"vite": "6.0.10",
-		"vite-plugin-minify": "^2.1.0"
-	},
+	"version": "0.0.0",
+	"private": true,
 	"packageManager": "pnpm@9.15.4",
+	"description": "Vite Vanilla JS",
+	"author": {
+		"name": "Timeless",
+		"email": "hello@timeless.co",
+		"url": "https://timeless.co/"
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/timelessco/vite-vanilla-js.git"
+	},
 	"engines": {
 		"node": "^18.18.0 || ^20.9.0 || >=22.0.0"
-	}
+	},
+	"scripts": {
+		"build:preview": "pnpm build && pnpm preview",
+		"build": "vite build",
+		"clean": "node scripts/clean.js",
+		"dedupe:packages": "pnpm dedupe --check",
+		"dev": "vite --host",
+		"fix": "pnpm run \"/^fix:.*/\"",
+		"fix:css": "stylelint '**/*.css' --fix --cache --ignore-path .gitignore --color -f verbose",
+		"fix:eslint": "eslint --cache --report-unused-disable-directives --color --fix .",
+		"fix:spelling": "node scripts/update-cspell-words.js",
+		"lint": "pnpm run \"/^lint:.*/\"",
+		"lint:css": "stylelint --cache --ignore-path .gitignore --color -f verbose '**/*.css'",
+		"lint:eslint": "eslint --cache --report-unused-disable-directives --color .",
+		"lint:knip": "knip --production",
+		"lint:spelling": "cspell --dot --gitignore --cache --no-progress --show-context check \"**/*\"",
+		"prepare": "is-ci || husky",
+		"preview": "vite preview",
+		"release": "release-it --ci"
+	},
+	"commitlint": {
+		"extends": [
+			"@commitlint/config-conventional"
+		]
+	},
+	"devDependencies": {
+		"@antfu/eslint-config": "^4.1.0",
+		"@commitlint/cli": "19.6.1",
+		"@commitlint/config-conventional": "19.6.0",
+		"@inquirer/prompts": "7.2.3",
+		"@octokit/core": "6.1.3",
+		"@vitejs/plugin-legacy": "6.0.0",
+		"autoprefixer": "10.4.20",
+		"cspell": "8.17.2",
+		"dotenv": "16.4.7",
+		"eslint": "9.18.0",
+		"execa": "^9.5.2",
+		"fs-extra": "^11.3.0",
+		"git-remote-origin-url": "4.0.0",
+		"git-url-parse": "16.0.0",
+		"glob": "^11.0.1",
+		"husky": "9.1.7",
+		"is-ci": "4.1.0",
+		"knip": "5.43.2",
+		"lint-staged": "15.4.2",
+		"postcss": "8.5.1",
+		"release-it": "18.1.2",
+		"rimraf": "6.0.1",
+		"stylelint": "16.13.2",
+		"stylelint-config-clean-order": "7.0.0",
+		"stylelint-config-standard": "37.0.0",
+		"tailwindcss": "3.4.17",
+		"terser": "5.37.0",
+		"vite": "6.0.11",
+		"vite-plugin-minify": "^2.1.0"
+	},
+	"lint-staged": {
+		"*": "pnpm lint:eslint"
+	},
+	"browserslist": [
+		"> 0.2%"
+	]
 }
