--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -6,7 +6,7 @@ jobs:
       - uses: ./.github/actions/pnpm-install
       - uses: JoshuaKGoldberg/all-contributors-auto-action@v0.4.3
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 name: Contributors
 
