--- a/package.json
+++ b/package.json
@@ -35,29 +35,21 @@
 		"lint:spelling": "cspell --dot --gitignore --cache --no-progress --show-context check \"**/*\"",
 		"prepare": "is-ci || husky",
 		"preview": "vite preview",
-		"release": "release-it --ci"
-	},
-	"commitlint": {
-		"extends": [
-			"@commitlint/config-conventional"
-		]
+		"release": "NODE_DEBUG=release-it:* release-it --dry-run"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^4.1.0",
-		"@commitlint/cli": "19.6.1",
-		"@commitlint/config-conventional": "19.6.0",
 		"@inquirer/prompts": "7.2.3",
 		"@octokit/core": "6.1.3",
+		"@release-it/conventional-changelog": "^10.0.0",
 		"@vitejs/plugin-legacy": "6.0.0",
 		"autoprefixer": "10.4.20",
 		"cspell": "8.17.2",
 		"dotenv": "16.4.7",
 		"eslint": "9.18.0",
 		"execa": "^9.5.2",
-		"fs-extra": "^11.3.0",
 		"git-remote-origin-url": "4.0.0",
 		"git-url-parse": "16.0.0",
-		"glob": "^11.0.1",
 		"husky": "9.1.7",
 		"is-ci": "4.1.0",
 		"knip": "5.43.2",
