--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"lint:spelling": "cspell --dot --gitignore --cache --no-progress --show-context check \"**/*\"",
 		"prepare": "is-ci || husky",
 		"preview": "vite preview",
-		"release": "NODE_DEBUG=release-it:* release-it --dry-run"
+		"release": "release-it --ci"
 	},
 	"devDependencies": {
 		"@antfu/eslint-config": "^4.1.0",
