chore(deps): 🧹 update dependencies and VSCode settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
 		// General extensions
 		"dbaeumer.vscode-eslint",
 		"stylelint.vscode-stylelint",
+		"streetsidesoftware.code-spell-checker",
 		"bradlc.vscode-tailwindcss",
 
 		// Quality of life extensions
