--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
 		"release": "release-it --ci"
 	},
 	"devDependencies": {
-		"@antfu/eslint-config": "^4.1.0",
+		"@antfu/eslint-config": "4.1.0",
 		"@inquirer/prompts": "7.2.3",
 		"@octokit/core": "6.1.3",
-		"@release-it/conventional-changelog": "^10.0.0",
+		"@release-it/conventional-changelog": "10.0.0",
 		"@vitejs/plugin-legacy": "6.0.0",
 		"autoprefixer": "10.4.20",
 		"cspell": "8.17.2",
 		"dotenv": "16.4.7",
 		"eslint": "9.18.0",
-		"execa": "^9.5.2",
+		"execa": "9.5.2",
 		"git-remote-origin-url": "4.0.0",
 		"git-url-parse": "16.0.0",
 		"husky": "9.1.7",
@@ -63,7 +63,7 @@
 		"tailwindcss": "3.4.17",
 		"terser": "5.37.0",
 		"vite": "6.0.11",
-		"vite-plugin-minify": "^2.1.0"
+		"vite-plugin-minify": "2.1.0"
 	},
 	"lint-staged": {
 		"*": "pnpm lint:eslint"
