--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"@inquirer/prompts": "7.2.3",
 		"@octokit/core": "6.1.3",
 		"@release-it/conventional-changelog": "10.0.0",
+		"@tailwindcss/vite": "^4.0.0",
 		"@vitejs/plugin-legacy": "6.0.0",
-		"autoprefixer": "10.4.20",
 		"cspell": "8.17.2",
 		"dotenv": "16.4.7",
 		"eslint": "9.18.0",
@@ -54,13 +54,12 @@
 		"is-ci": "4.1.0",
 		"knip": "5.43.2",
 		"lint-staged": "15.4.2",
-		"postcss": "8.5.1",
 		"release-it": "18.1.2",
 		"rimraf": "6.0.1",
 		"stylelint": "16.13.2",
 		"stylelint-config-clean-order": "7.0.0",
 		"stylelint-config-standard": "37.0.0",
-		"tailwindcss": "3.4.17",
+		"tailwindcss": "4.0.0",
 		"terser": "5.37.0",
 		"vite": "6.0.11",
 		"vite-plugin-minify": "2.1.0"
