--- a/.github/actions/pnpm-install/action.yml
+++ b/.github/actions/pnpm-install/action.yml
@@ -11,31 +11,32 @@
 #   - latest: https://github.com/pnpm/action-setup#use-cache-to-reduce-installation-time#
 # #######################################################################################
 
-name: PNPM install
 description: Run pnpm install with cache enabled
 
-runs:
-  using: composite
+name: PNPM install
 
+runs:
   steps:
     - name: Configure Git
       uses: ./.github/actions/git-config
 
-    - uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
-      name: Install pnpm
+    - name: Install pnpm
+      uses: pnpm/action-setup@a7487c7e89a18df4991f7f222e4898a00d66ddda # v4
       with:
         run_install: false
 
     - name: Install Node.js
       uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
       with:
-        node-version-file: .nvmrc
         cache: pnpm
+        node-version-file: .nvmrc
 
-    - name: Install dependencies
-      shell: bash
-      working-directory: ${{ inputs.cwd }}
-      run: pnpm install --frozen-lockfile --prefer-offline
-      env:
+    - env:
         # Other environment variables
         HUSKY: "0" # By default do not run HUSKY install
+      name: Install dependencies
+      run: pnpm install --frozen-lockfile --prefer-offline
+      shell: bash
+      working-directory: ${{ inputs.cwd }}
+
+  using: composite
