feat(tooling)!: updated to latest standards followed in other repos
- Added .editorconfig for consistent coding styles.
- Created .env.example for environment variable setup.
- Introduced .gitattributes to manage line endings and file types.
- Added .markdownlint-cli2.jsonc for markdown linting configuration.
- Created .npmrc for PNPM settings.
- Added .prettierignore to specify files to ignore for Prettier.
- Updated cspell.json with new terms.
- Modified package.json to include additional built dependencies.
- Added prettier.config.cjs for Prettier configuration.
- Introduced turbo.json for task management.
- Created .github/labels.yml for issue labeling.
- Added workflows for cleaning up PR caches and syncing labels.
- Introduced commit-msg hook for commit message linting.

--- a/package.json
+++ b/package.json
@@ -110,7 +110,10 @@
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
-			"@tailwindcss/oxide"
+			"@tailwindcss/oxide",
+			"core-js",
+			"esbuild",
+			"unrs-resolver"
 		]
 	}
 }
