--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
 		"dev": "vite --host",
 		"fix": "turbo fix:eslint",
 		"fix:css": "stylelint --fix --cache --ignore-path .gitignore --color -f verbose '**/*.css'",
-		"fix:eslint": "eslint --cache --color --fix .",
+		"fix:eslint": "eslint --cache --color --fix --concurrency=auto .",
 		"fix:md": "markdownlint-cli2 --fix --rules sentences-per-line",
 		"fix:prettier": "prettier --write --cache --cache-location=.prettiercache --list-different --ignore-unknown .",
 		"fix:spelling": "node scripts/update-cspell-words.js",
 		"lint": "turbo lint:prettier lint:eslint lint:knip lint:md lint:spelling lint:css",
 		"lint:css": "stylelint --cache --ignore-path .gitignore --color -f verbose '**/*.css'",
-		"lint:eslint": "eslint --cache --color .",
+		"lint:eslint": "eslint --cache --color --concurrency=auto .",
 		"lint:knip": "knip --production",
 		"lint:md": "markdownlint-cli2 --rules sentences-per-line",
 		"lint:prettier": "prettier --check --cache --cache-location=.prettiercache --ignore-unknown .",
@@ -62,7 +62,8 @@
 		"@inquirer/prompts": "7.8.4",
 		"@octokit/core": "7.0.3",
 		"@release-it/conventional-changelog": "10.0.1",
-		"@tailwindcss/vite": "^4.1.11",
+		"@tailwindcss/vite": "^4.1.12",
+		"@types/node": "24.3.0",
 		"@vitejs/plugin-legacy": "7.2.1",
 		"all-contributors-cli": "6.26.1",
 		"cspell": "9.2.0",
