--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "20.1.0",
 		"@commitlint/config-conventional": "20.0.0",
+		"@eslint-community/eslint-plugin-eslint-comments": "4.5.0",
 		"@eslint/js": "9.38.0",
 		"@ianvs/prettier-plugin-sort-imports": "4.7.0",
 		"@inquirer/prompts": "7.9.0",
