--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,5 +2,6 @@
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
 	"enabled": true,
 	"extends": ["config:best-practices", "config:semverAllMonthly"],
+	"updateNotScheduled": false,
 	"postUpdateOptions": ["pnpmDedupe"]
 }
